hphp/test/zend/good/ext/gd/tests/xbm2png.php.skipif
<?php 
	if (!extension_loaded('gd')) {
		die("skip gd extension not available.");
	}
	if (!function_exists("imagepng")) {
		die("skip png support unavailable");
	}
	if (!function_exists("imagecreatefromxbm")) {
		die("skip xbm read support unavailable");
	}
?>