hphp/test/zend/bad/ext/gd/tests/xpm2png.php.skipif
<?php
	if (!extension_loaded('gd')) {
		die("skip gd extension not available.");
	}

	if (!function_exists("imagepng")) {
		die("skip png support unavailable");
	}
	if (!function_exists("imagecreatefromxpm")) {
		die("skip xpm read support unavailable");
	}
?>